# lib_ui

./: CMakeLists.txt  emoji.txt  lib_ui.gyp
cmake/: generate_emoji.cmake  generate_palette.cmake  generate_styles.cmake
emoji_old/: data3.txt  data5.txt  data6.txt  data7.txt  data8.txt
emoji_suggestions/: emoji_autocomplete.json  emoji_suggestions.cpp  emoji_suggestions.h  emoji_suggestions_helper.h
fonts/: fonts.qrc
gyp/: codegen_actions.gypi  qrc_rule.gypi  sources.txt  styles_rule.gypi  update_dependent.py
qt_conf/: gpu_driver_bug_list.json  linux.qrc  win.qrc
ui/: abstract_button.cpp  abstract_button.h  accessibility.cpp  accessibility.h  animated_icon.cpp  animated_icon.h  arc_angles.h  basic.style  basic_click_handlers.cpp  basic_click_handlers.h  cached_special_layer_shadow_corners.cpp  cached_special_layer_shadow_corners.h  click_handler.cpp  click_handler.h  colors.palette  delayed_activation.cpp  delayed_activation.h  dragging_scroll_manager.cpp  dragging_scroll_manager.h  dynamic_image.h  emoji_config.cpp  emoji_config.h  focus_persister.h  inactive_press.cpp  inactive_press.h  integration.cpp  integration.h  main_queue_processor.cpp  main_queue_processor.h  painter.h  ph.cpp  ph.h  qt_object_factory.h  qt_weak_factory.h  rect.h  rect_part.h  round_rect.cpp  round_rect.h  rp_widget.cpp  rp_widget.h  (+12 more)
ui/accessibility/: accessibility_factory.cpp  accessibility_factory.h
ui/accessible/: ui_accessible_children_manager.cpp  ui_accessible_children_manager.h  ui_accessible_factory.cpp  ui_accessible_factory.h  ui_accessible_item.cpp  ui_accessible_item.h  ui_accessible_widget.cpp  ui_accessible_widget.h
ui/dpr/: dpr_icon.cpp  dpr_icon.h  dpr_image.h
ui/effects/: animation_value.cpp  animation_value.h  animation_value_f.h  animations.cpp  animations.h  cross_animation.cpp  cross_animation.h  cross_line.cpp  cross_line.h  fade_animation.cpp  fade_animation.h  frame_generator.cpp  frame_generator.h  gradient.cpp  gradient.h  numbers_animation.cpp  numbers_animation.h  panel_animation.cpp  panel_animation.h  path_shift_gradient.cpp  path_shift_gradient.h  radial_animation.cpp  radial_animation.h  ripple_animation.cpp  ripple_animation.h  round_area_with_shadow.cpp  round_area_with_shadow.h  show_animation.cpp  show_animation.h  slide_animation.cpp  slide_animation.h  spoiler_mess.cpp  spoiler_mess.h
ui/gl/: gl_detection.cpp  gl_detection.h  gl_image.cpp  gl_image.h  gl_math.cpp  gl_math.h  gl_primitives.cpp  gl_primitives.h  gl_shader.cpp  gl_shader.h  gl_surface.cpp  gl_surface.h  gl_window.cpp  gl_window.h
ui/image/: image_prepare.cpp  image_prepare.h
ui/layers/: box_content.cpp  box_content.h  box_layer_widget.cpp  box_layer_widget.h  generic_box.cpp  generic_box.h  layer_manager.cpp  layer_manager.h  layer_widget.cpp  layer_widget.h  layers.style  show.cpp  show.h
ui/paint/: arcs.cpp  arcs.h  blob.cpp  blob.h  blob_linear.cpp  blob_linear.h  blobs.cpp  blobs.h  blobs_linear.cpp  blobs_linear.h
ui/platform/: ui_platform_utility.cpp  ui_platform_utility.h  ui_platform_window.cpp  ui_platform_window.h  ui_platform_window_title.cpp  ui_platform_window_title.h
ui/platform/linux/: ui_linux_wayland_integration.cpp  ui_linux_wayland_integration.h  ui_linux_wayland_integration_dummy.cpp  ui_platform_utility_linux.cpp  ui_utility_linux.cpp  ui_utility_linux.h  ui_window_linux.cpp  ui_window_linux.h  ui_window_title_linux.cpp  ui_window_title_linux.h  wayland-egl.json
ui/platform/mac/: ui_native_scroll_mac.h  ui_native_scroll_mac.mm  ui_platform_utility_mac.mm  (+6 more)
ui/rhi/: rhi_image.cpp  rhi_image.h  rhi_renderer.h  rhi_shader.cpp  rhi_shader.h  rhi_surface.cpp  rhi_surface.h
ui/style/: sp.cpp  sp.h  style_core.cpp  style_core.h  style_core_color.cpp  style_core_color.h  style_core_custom_font.cpp  style_core_custom_font.h  style_core_direction.cpp  style_core_direction.h  style_core_font.cpp  style_core_font.h  style_core_icon.cpp  style_core_icon.h  style_core_palette.cpp  style_core_palette.h  style_core_scale.cpp  style_core_scale.h  style_core_types.cpp  style_core_types.h  style_palette_colorizer.cpp  style_palette_colorizer.h  style_runtime.cpp  style_runtime.h
ui/text/: custom_emoji_helper.cpp  custom_emoji_helper.h  custom_emoji_instance.cpp  custom_emoji_instance.h  custom_emoji_text_badge.cpp  custom_emoji_text_badge.h  qtextitemint.cpp  text.cpp  text.h  text_bidi_algorithm.h  text_block.cpp  text_block.h  text_block_parser.cpp  text_block_parser.h  text_custom_emoji.cpp  text_custom_emoji.h  text_draw_cache.cpp  text_draw_cache.h  text_entity.cpp  text_entity.h  text_extended_data.cpp  text_extended_data.h  text_html_tags.cpp  text_html_tags.h  text_inline_object.h  text_isolated_emoji.h  text_parser.cpp  text_parser.h  text_renderer.cpp  text_renderer.h  text_spoiler_data.cpp  text_spoiler_data.h  text_stack_engine.cpp  text_stack_engine.h  text_utilities.cpp  text_utilities.h  text_variant.cpp  text_variant.h  text_word.h  text_word_parser.cpp  (+1 more)
ui/toast/: toast.cpp  toast.h  toast_manager.cpp  toast_manager.h  toast_widget.cpp  toast_widget.h
ui/toasts/: common_toasts.cpp  common_toasts.h
ui/widgets/: box_content_divider.cpp  box_content_divider.h  buttons.cpp  buttons.h  call_button.cpp  call_button.h  call_mute_button.cpp  call_mute_button.h  checkbox.cpp  checkbox.h  dropdown_menu.cpp  dropdown_menu.h  elastic_scroll.cpp  elastic_scroll.h  icon_button_with_text.cpp  icon_button_with_text.h  inner_dropdown.cpp  inner_dropdown.h  input_fields.cpp  input_fields.h  kinetic_scroller.cpp  kinetic_scroller.h  labels.cpp  labels.h  menu.cpp  menu.h  pill_tabs.cpp  pill_tabs.h  popup_menu.cpp  popup_menu.h  rp_window.cpp  rp_window.h  scroll_area.cpp  scroll_area.h  separate_panel.cpp  separate_panel.h  shadow.cpp  shadow.h  side_bar_button.cpp  side_bar_button.h  (+9 more)
ui/wrap/: fade_wrap.cpp  fade_wrap.h  follow_slide_wrap.cpp  follow_slide_wrap.h  padding_wrap.cpp  padding_wrap.h  slide_wrap.cpp  slide_wrap.h  table_layout.cpp  table_layout.h  vertical_layout.cpp  vertical_layout.h  vertical_layout_reorder.cpp  vertical_layout_reorder.h  wrap.h
(+44 files in other folders)
